; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-page.c_pdf_flatten_inheritable_page_items.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-page.c_pdf_flatten_inheritable_page_items.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MediaBox = common dso_local global i32 0, align 4
@CropBox = common dso_local global i32 0, align 4
@Rotate = common dso_local global i32 0, align 4
@Resources = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pdf_flatten_inheritable_page_items(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = load i32, i32* @MediaBox, align 4
  %8 = call i32 @PDF_NAME(i32 %7)
  %9 = call i32 @pdf_flatten_inheritable_page_item(i32* %5, i32* %6, i32 %8)
  %10 = load i32*, i32** %3, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = load i32, i32* @CropBox, align 4
  %13 = call i32 @PDF_NAME(i32 %12)
  %14 = call i32 @pdf_flatten_inheritable_page_item(i32* %10, i32* %11, i32 %13)
  %15 = load i32*, i32** %3, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = load i32, i32* @Rotate, align 4
  %18 = call i32 @PDF_NAME(i32 %17)
  %19 = call i32 @pdf_flatten_inheritable_page_item(i32* %15, i32* %16, i32 %18)
  %20 = load i32*, i32** %3, align 8
  %21 = load i32*, i32** %4, align 8
  %22 = load i32, i32* @Resources, align 4
  %23 = call i32 @PDF_NAME(i32 %22)
  %24 = call i32 @pdf_flatten_inheritable_page_item(i32* %20, i32* %21, i32 %23)
  ret void
}

declare dso_local i32 @pdf_flatten_inheritable_page_item(i32*, i32*, i32) #1

declare dso_local i32 @PDF_NAME(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
